--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ Django==5.2.4
 django-crispy-forms==2.4
 frozenlist==1.8.0
 geoip2==5.1.0
+gunicorn==23.0.0
 idna==3.10
 maxminddb==2.8.2
 multidict==6.7.0
+packaging==25.0
 pillow==11.3.0
 propcache==0.4.1
 pycryptodome==3.23.0
