--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==25.4.0
 certifi==2025.10.5
 charset-normalizer==3.4.3
 crispy-tailwind==1.0.3
+dj-database-url==3.0.1
 Django==5.2.4
 django-crispy-forms==2.4
 frozenlist==1.8.0
@@ -17,6 +18,7 @@ multidict==6.7.0
 packaging==25.0
 pillow==11.3.0
 propcache==0.4.1
+psycopg2-binary==2.9.11
 pycryptodome==3.23.0
 rave-python==1.4.2
 requests==2.32.5
