--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ asgiref==3.9.1
 attrs==25.4.0
 certifi==2025.10.5
 charset-normalizer==3.4.3
+cloudinary==1.44.1
 crispy-tailwind==1.0.3
 dj-database-url==3.0.1
 Django==5.2.4
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.4
 frozenlist==1.8.0
 geoip2==5.1.0
@@ -22,6 +24,7 @@ psycopg2-binary==2.9.11
 pycryptodome==3.23.0
 rave-python==1.4.2
 requests==2.32.5
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
